test/test-files/analyzer/operators/error-multiplicative-operators-some-combinations/exception.out
Semantic error in : ./test-files/analyzer/operators/error-multiplicative-operators-some-combinations/source.spice:2:29:
Wrong data type for operator: Cannot apply '*' operator on types bool and string

2  calcResult = true * "test";
                       ^^^^^^